2000-09-18  Bart Schaefer  <schaefer@zsh.org>

	* 12833: Back out the zasprintf changes from 12814, they're not
	being used any more and they break common builds like SunOS.

2000-09-17  Bart Schaefer  <schaefer@zsh.org>

	* 12829: Src/glob.c, Src/init.c, Src/utils.c: Move dyncat() and
	tricat() to utils.c; rewrite 12814, 12818, 12827 and 12828 for
	less allocation-intensive behavior.

2000-09-18  Clint Adams  <schizo@debian.org>

	* 12828: Src/utils.c: dynamically allocate 'dir' in mailstat.

	* 12827: Src/utils.c: dynamically allocate 'file' in mailstat.

2000-09-17  Clint Adams  <schizo@debian.org>

	* unposted: Src/system.h, Src/utils.c: define mailstat()
	as a macro if MAILDIR_SUPPORT is undefined.

	* 12823: Src/builtin.c, Src/utils.c: use zsh heap instead of
	permanent heap.

	* 12821: Src/builtin.c: bin_dot is now independent of PATH_MAX.

2000-09-16  Bart Schaefer  <schaefer@zsh.org>

	* 12817: Doc/Zsh/builtins.yo, Src/builtin.c: Give meaning to
	"typeset +m" and "typeset +g -m".

2000-09-16  Clint Adams  <schizo@debian.org>

	* 12818: Src/init.c: call tricat() instead of zasprintf()
	as inspired by Bart.

	* 12814: configure.in, Src/compat.c, Src/init.c, Src/system.h:
	implement zasprintf and use it in lieu of sprintf with a
	static buffer in sourcehome().

2000-09-15  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Doc/Zsh/contrib.yo: Missing hunk from 12765 (replace
	another use of "wordcode").

2000-09-14  Bart Schaefer  <schaefer@zsh.org>

	* 12804: Src/builtin.c: "typeset -m" implies "-g".

	* unposted: Completion/Commands/_complete_debug: Changed my mind
	about the edit to 12800.

2000-09-13  Bart Schaefer  <schaefer@zsh.org>

	* 12800: E. Jay Berkenbilt: Completion/Commands/_complete_debug:
	Quote the file name pushed onto the history, in case the command
	word has strange characters in it.  (Slighty edited.)

2000-09-11  Bart Schaefer  <schaefer@zsh.org>

	* 12793: Completion/Builtins/_zle, Doc/Zsh/compwid.yo,